testData/org/elixir_lang/inspection/unresolvable_type/type_body_unbound_variable_flagged.ex
defmodule TypeBodyUnboundVariable do
  @type bad_free(a) :: {a, <error descr="Type 'b/0' is not defined">b</error>}
end
